name:                langauge-c-transform
version:             0.1.0
synopsis:            Rewrite C programs.
description:         Various tranformations for C programs.
homepage:            https://github.com/vickenty/langauge-c-transform
license:             BSD3
license-file:        LICENSE
author:              Vickenty Fesunov
maintainer:          kent@setattr.net
copyright:           2016 Vickenty Fesunov
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.C.Transform
                     , Language.C.Transform.HoistVariables
  build-depends:       base >= 4.7 && < 5
                     , language-c >= 0.5 && < 0.6
                     , mtl >= 2.2 && < 2.3
                     , containers >= 0.5 && < 0.6
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

executable ctrans
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , language-c >= 0.5 && < 0.6
                     , mtl >= 2.2 && < 2.3
                     , containers >= 0.5 && < 0.6
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite language-c-transform-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , language-c >= 0.5 && < 0.6
                     , langauge-c-transform
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vickenty/langauge-c-transform
